--- a/src/app/home/nav-bar/nav-bar.component.html
+++ b/src/app/home/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
             <a a class="nav-link" href="about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Gallery</a>
