--- a/src/app/home/welcome/welcome.component.html
+++ b/src/app/home/welcome/welcome.component.html
@@ -3,6 +3,6 @@
         <p>Welcome to my world !</p>
     </div>
     <div class="welcome-note">
-        <p class="par">This is the place where I shared huge information about me, go throug the sections available in this website and know about me.</p>
+        <p class="par">This is the place where I share information about me, go through the sections available in this website and know more.</p>
     </div>
 </div>
