--- a/src/app/home/nav-bar/nav-bar.component.html
+++ b/src/app/home/nav-bar/nav-bar.component.html
@@ -14,10 +14,7 @@
             <a class="nav-link" href="skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Hire Me</a>
+            <a class="nav-link" href="trajectory">Trajectory</a>
           </li>
           <li class="nav-item">
               <a a class="nav-link" href="#">Contact</a>
