--- a/src/app/home/nav-bar/nav-bar.component.html
+++ b/src/app/home/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="trajectory">Trajectory</a>
           </li>
           <li class="nav-item">
-              <a a class="nav-link" href="#">Contact</a>
+              <a a class="nav-link" href="contact">Contact</a>
             </li>
         </ul>
       </div>
