Completing the website

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,23 @@
 <app-nav-bar></app-nav-bar>
-<app-display-image></app-display-image>
-<app-welcome></app-welcome>
-<app-quote></app-quote>
+<div class="my-title-image">
+    <img class="img-responsive" src="assets/images/final-div.png">
+  </div>
+<div class="welcome">
+    <div class="welcome-title">
+        <p>Welcome to my world !</p>
+    </div>
+    <div class="welcome-note">
+        <p class="par">This is the place where I share information about me, go through the sections available in this website and know more.</p>
+    </div>
+</div>
+
+<div class="quote">
+    <div class="q_cen">
+        <h6>
+            You cannot change your future, but you can change your habits, and surely your habits will change your future...... 
+        </h6>
+        <h5>_Dr.A.P.J.Abdul kalam.</h5>
+    </div>
+</div>
 <app-home-footer></app-home-footer>
 
