--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,21 +1,107 @@
 .contact-form-container {
     max-width: 600px;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 2rem;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
+  }
+  
+  .form-title {
+    text-align: left;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    border-bottom: 2px solid #fff;
+    padding-bottom: 0.5rem;
   }
   
   .form-group {
     margin-bottom: 1rem;
   }
   
+  label {
+    display: block;
+    font-size: 0.875rem;
+    margin-bottom: 0.5rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+  }
+  
+  .form-input,
+  .form-textarea {
+    width: calc(50% - 1rem);
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+  }
+  
+  .form-input:focus,
+  .form-textarea:focus {
+    outline: none;
+    border-color: #fff;
+    background: rgba(255, 255, 255, 0.3);
+  }
+  
+  .form-textarea {
+    width: 100%;
+    height: 100px;
+    resize: none;
+  }
+  
+  .form-actions {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .btn {
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+  }
+  
+  .btn-submit {
+    background: #fff;
+    color: #000;
+  }
+  
+  .btn-reset {
+    background: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+  }
+  
+  .btn-submit:hover,
+  .btn-reset:hover {
+    opacity: 0.9;
+  }
+  
   .error {
     color: red;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
   }
   
   @media (max-width: 600px) {
-    .contact-form-container {
-      padding: 0.5rem;
+    .form-input,
+    .form-textarea {
+      width: 100%;
     }
   }
-  
+  .form-background {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: url('../../assets/images/bg.jpg') ;
+    background-size: cover;
+    color: #fff;
+    padding-top: 6rem;
+    padding-bottom: 1rem;
+  }
