--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,30 +1,38 @@
+<app-nav-bar></app-nav-bar>
+<div class="form-background">
 <div class="contact-form-container">
     <form (ngSubmit)="onSubmit()" #contactForm="ngForm">
+      <h2 class="form-title">Contact</h2>
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" required [(ngModel)]="name" name="name" #nae="ngModel">
-        <div *ngIf="nae.invalid && (nae.dirty || nae.touched)" class="error">
+        <label for="name">Name</label>
+        <input type="text" id="name" required [(ngModel)]="name" name="name" #user="ngModel" class="form-input">
+        <div *ngIf="user.invalid && (user.dirty || user.touched)" class="error">
           Name is required.
         </div>
       </div>
   
       <div class="form-group">
-        <label for="mail">Email:</label>
-        <input type="email" id="mail" required [(ngModel)]="mail" name="email" #email="ngModel">
+        <label for="email">Email</label>
+        <input type="email" id="email" required [(ngModel)]="mail" name="email" #email="ngModel" class="form-input">
         <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
           Valid email is required.
         </div>
       </div>
   
       <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" required [(ngModel)]="message" name="message" #msg="ngModel"></textarea>
+        <label for="message">Message</label>
+        <textarea id="message" required [(ngModel)]="message" name="message" #msg="ngModel" class="form-textarea"></textarea>
         <div *ngIf="msg.invalid && (msg.dirty || msg.touched)" class="error">
           Message is required.
         </div>
       </div>
   
-      <button type="submit" [disabled]="contactForm.form.invalid">Submit</button>
+      <div class="form-actions">
+        <button type="reset" [disabled]="contactForm.form.invalid" class="btn btn-submit">Send Message</button>
+        <button type="reset" class="btn btn-reset">Reset</button>
+      </div>
     </form>
   </div>
   
+</div>
+<app-home-footer></app-home-footer>
